Update Programação Combate V2.0.1

--- a/Programação Combate V2.0.1
+++ b/Programação Combate V2.0.1
@@ -1,6 +1,6 @@
 /* Programacao Combate V2.0.1.ino
  * Código para controle de robô beetleweight
- * Autores: Isabella Galvão e Marcus Vinícius
+ * Autores: Isabella Galvão, Marcus Vinícius e kewin lima
  * 16/03/2015
  */
 
