--- a/Programação Combate V2.1.1
+++ b/Programação Combate V2.1.1
@@ -1,6 +1,6 @@
-/* Programacao Combate V2.1.0.ino
+/* Programacao Combate V2.1.1.ino
  * Código para controle de robô beetleweight
- * Autores: Isabella Galvão, Marcus Vinícius e kewin lima
+ * Autores: Isabella Galvão, Marcus Vinícius e Kewin Lima
  * 16/03/2015
  */
 
