--- a/Programação Combate V2.2.1
+++ b/Programação Combate V2.2.1
@@ -1,6 +1,6 @@
-/* Programacao Combate V2.2.3.ino
+/* Programacao Combate V2.2.4.ino
  * Código para controle de robô beetleweight
- * Autores: Isabella Galvão, Marcus Vinícius e Kewin Lima
+ * Autores: Isabella Galvão, Marcus Vinícius e Kewin Lima.
  * 16/03/2015
  */
 
